[tool.poetry]
name = "Encke"
version = "1.0.0"
description = ""
authors = ["Xavier Méndez <xmmendezy@gmail.com>"]

[tool.poetry.scripts]
runserver = "scripts:runserver"
migrate = "scripts:migrate"
collectstatic = "scripts:collectstatic"
clear = "scripts:clear"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-cors-headers = "^3.4.0"
djangorestframework = "^3.11.0"
djangorestframework-jwt = "^1.11.0"
channels = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
pytest-xdist = "^1.33.0"
pylint = "^2.5.3"
pylint-django = "^2.1.0"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
